// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Badge /> Dot story renders snapshot 1`] = `
<div
  class="badge__wrapper"
>
  <div
    aria-label="Ava has notification"
    class="fpo flex h-8 w-8 items-center justify-center"
  >
    Ava
  </div>
  <div
    aria-hidden="true"
    class="badge badge--empty"
  />
</div>
`;

exports[`<Badge /> IconBadge story renders snapshot 1`] = `
<div
  class="badge__wrapper"
>
  <div
    aria-label="Ava alert"
    class="fpo flex h-8 w-8 items-center justify-center"
  >
    Ava
  </div>
  <div
    aria-hidden="true"
    class="badge"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      height="1rem"
      style="--icon-size: 1rem;"
      viewBox="0 0 24 24"
      width="1rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.87 15.25l-3.37-2V8.72c0-.4-.32-.72-.72-.72h-.06c-.4 0-.72.32-.72.72v4.72c0 .35.18.68.49.86l3.65 2.19c.34.2.78.1.98-.24.21-.35.1-.8-.25-1zm5.31-10.24L18.1 2.45c-.42-.35-1.05-.3-1.41.13-.35.42-.29 1.05.13 1.41l3.07 2.56c.42.35 1.05.3 1.41-.13.36-.42.3-1.05-.12-1.41zM4.1 6.55l3.07-2.56c.43-.36.49-.99.13-1.41-.35-.43-.98-.48-1.4-.13L2.82 5.01c-.42.36-.48.99-.12 1.41.35.43.98.48 1.4.13zM12 4c-4.97 0-9 4.03-9 9s4.03 9 9 9 9-4.03 9-9-4.03-9-9-9zm0 16c-3.86 0-7-3.14-7-7s3.14-7 7-7 7 3.14 7 7-3.14 7-7 7z"
      />
    </svg>
  </div>
</div>
`;

exports[`<Badge /> IconBadgeUsingIcon story renders snapshot 1`] = `
<div
  class="badge__wrapper"
>
  <div
    aria-label="Ava alert"
    class="fpo flex h-8 w-8 items-center justify-center"
  >
    Ava
  </div>
  <div
    aria-hidden="true"
    class="badge"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      height="1rem"
      style="--icon-size: 1rem;"
      viewBox="0 0 24 24"
      width="1rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.87 15.25l-3.37-2V8.72c0-.4-.32-.72-.72-.72h-.06c-.4 0-.72.32-.72.72v4.72c0 .35.18.68.49.86l3.65 2.19c.34.2.78.1.98-.24.21-.35.1-.8-.25-1zm5.31-10.24L18.1 2.45c-.42-.35-1.05-.3-1.41.13-.35.42-.29 1.05.13 1.41l3.07 2.56c.42.35 1.05.3 1.41-.13.36-.42.3-1.05-.12-1.41zM4.1 6.55l3.07-2.56c.43-.36.49-.99.13-1.41-.35-.43-.98-.48-1.4-.13L2.82 5.01c-.42.36-.48.99-.12 1.41.35.43.98.48 1.4.13zM12 4c-4.97 0-9 4.03-9 9s4.03 9 9 9 9-4.03 9-9-4.03-9-9-9zm0 16c-3.86 0-7-3.14-7-7s3.14-7 7-7 7 3.14 7 7-3.14 7-7 7z"
      />
    </svg>
  </div>
</div>
`;

exports[`<Badge /> LargeBadgeableObject story renders snapshot 1`] = `
<div
  class="badge__wrapper"
>
  <div
    aria-label="Badge-able Obj has 10 notifications"
    class="fpo flex h-96 w-96 items-center justify-center"
  >
    Badge-able Obj
  </div>
  <div
    aria-hidden="true"
    class="badge"
  >
    10
  </div>
</div>
`;

exports[`<Badge /> LargeNumber story renders snapshot 1`] = `
<div
  class="badge__wrapper"
>
  <div
    aria-label="Ava has 999 notifications"
    class="fpo flex h-8 w-8 items-center justify-center"
  >
    Ava
  </div>
  <div
    aria-hidden="true"
    class="badge"
  >
    999
  </div>
</div>
`;

exports[`<Badge /> OverNineThousand story renders snapshot 1`] = `
<div
  class="badge__wrapper"
>
  <div
    aria-label="Ava has more than 99 notifications"
    class="fpo flex h-8 w-8 items-center justify-center"
  >
    Ava
  </div>
  <div
    aria-hidden="true"
    class="badge"
  >
    99+
  </div>
</div>
`;

exports[`<Badge /> SmallNumber story renders snapshot 1`] = `
<div
  class="badge__wrapper"
>
  <div
    aria-label="Ava has 1 notification"
    class="fpo flex h-8 w-8 items-center justify-center"
  >
    Ava
  </div>
  <div
    aria-hidden="true"
    class="badge"
  >
    1
  </div>
</div>
`;
